--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,20 @@
 {
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": "./src",
+    "paths": {
+      "~/*": [
+        "./*"
+      ],
+      "@/*": [
+        "./*"
+      ],
+      "~~/*": [
+        "./*"
+      ],
+      "@@/*": [
+        "./*"
+      ]
+    }
   },
   "include": [
     "src"
