--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "start": "next start",
     "export": "next export",
     "lint": "next lint",
-    "lint-fix": "next lint --fix"
+    "lint-fix": "next lint --fix",
+    "seed": "node prisma/seed.js"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@emotion/cache": "^11.5.0",
@@ -21,17 +25,27 @@
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
     "@mui/styles": "^5.0.2",
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.3.1",
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "chart.js": "^3.5.1",
     "date-fns": "^2.25.0",
     "formik": "^2.1.5",
+    "heroku": "^7.63.0",
     "history": "^5.0.0",
     "next": "^12.0.3-canary.7",
+    "next-auth": "^4.10.3",
     "nprogress": "^0.2.0",
+    "prisma": "^4.3.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-query": "^3.39.2",
+    "react-step-wizard": "^5.3.11",
+    "recoil": "^0.7.5",
     "uuid": "^8.3.0",
     "yup": "^0.32.9"
   },
