--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/styles": "^5.0.2",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "chart.js": "^3.5.1",
@@ -35,6 +36,7 @@
     "formik": "^2.1.5",
     "heroku": "^7.63.0",
     "history": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "^12.0.3-canary.7",
     "next-auth": "^4.10.3",
     "nprogress": "^0.2.0",
