--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
     "@sendgrid/mail": "^7.7.0",
+    "@stripe/react-stripe-js": "^1.10.0",
+    "@stripe/stripe-js": "^1.36.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "chart.js": "^3.5.1",
@@ -37,6 +39,8 @@
     "heroku": "^7.63.0",
     "history": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
+    "micro": "^9.4.1",
+    "micro-cors": "^0.1.1",
     "next": "^12.0.3-canary.7",
     "next-auth": "^4.10.3",
     "nprogress": "^0.2.0",
@@ -48,7 +52,9 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-query": "^3.39.2",
     "react-step-wizard": "^5.3.11",
+    "react-toastify": "^9.0.8",
     "recoil": "^0.7.5",
+    "stripe": "^10.10.0",
     "uuid": "^8.3.0",
     "yup": "^0.32.9"
   },
