--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "chart.js": "^3.5.1",
+    "country-iso-2-to-3": "^1.1.0",
     "date-fns": "^2.25.0",
     "formik": "^2.1.5",
     "heroku": "^7.63.0",
