--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
     "@mui/styles": "^5.0.2",
+    "@mui/x-date-pickers": "^5.0.8",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
     "@sendgrid/mail": "^7.7.0",
